@@ -1,6 +1,7 @@
 package com.github.scribejava.core.model;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -27,5 +28,23 @@ public class OAuthRequestTest {
     @Test(expected = IllegalArgumentException.class)
     public void shouldThrowExceptionIfParameterIsNotOAuth() {
         request.addOAuthParameter("otherParam", "value");
+    }
+
+    @Test
+    public void shouldNotSentHeaderTwice() {
+        assertTrue(request.getHeaders().isEmpty());
+        request.addHeader("HEADER-NAME", "first");
+        request.addHeader("header-name", "middle");
+        request.addHeader("Header-Name", "last");
+
+        assertEquals(1, request.getHeaders().size());
+
+        assertTrue(request.getHeaders().containsKey("HEADER-NAME"));
+        assertTrue(request.getHeaders().containsKey("header-name"));
+        assertTrue(request.getHeaders().containsKey("Header-Name"));
+
+        assertEquals("last", request.getHeaders().get("HEADER-NAME"));
+        assertEquals("last", request.getHeaders().get("header-name"));
+        assertEquals("last", request.getHeaders().get("Header-Name"));
     }
 }
